Bug 104986 - Palm detection on Intuos Paper not working
Summary: Palm detection on Intuos Paper not working
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 104985
  Show dependency treegraph
 
Reported: 2018-02-07 05:08 UTC by Peter Hutterer
Modified: 2018-03-05 05:56 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Peter Hutterer 2018-02-07 05:08:53 UTC
Needs a palm threshold of ~5 to detect based on touch size, we don't have anything else we can hook onto.

The current code requires use_touch_size enabled to activate palm size, but that shouldn't be necessary for this device - our lower threshold is 0 here.

And palm detection doesn't kick in on this device because it's an external touchpad. Need to extend this to cater for tablet touch devices.

Arguably having better touch arbitration here (Bug 104985) would work too, but only for the proximity-out scenario, not necessarily for the proximity-in scenario.
Comment 1 Peter Hutterer 2018-03-05 05:56:11 UTC
commit a437d9374bc69495f7c64859dc0e1bd470d01baa
Author: Peter Hutterer <>
Date:   Fri Feb 9 12:17:38 2018 +1000

     touchpad: enable palm detection on tablets' touchpads


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.